--- a/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home.xml
@@ -30,7 +30,7 @@
             android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:background="@drawable/rounded_button"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/montserrat_bold"
             android:text="Create Collab"
             android:textColor="@color/colorWhite" />
     </RelativeLayout>
