--- a/Tech/Shopper/app/src/main/res/layout/activity_edit_promo_post.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_edit_promo_post.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Your Promotion Ideas"
+                android:text="Edit Promotion Ideas"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 android:fontFamily="@font/open_sans_extrabold"
