--- a/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home_helper.xml
@@ -11,6 +11,7 @@
     android:layout_marginHorizontal="3dp"
     app:contentPadding="5dp"
     android:id="@+id/cplatform_home_helper_click_CV"
+    android:background="@color/colorGrey"
     >
 
     <LinearLayout
@@ -27,6 +28,7 @@
             android:maxLines="1"
             android:maxLength="35"
             android:ellipsize="end"
+            android:fontFamily="@font/open_sans"
             android:textSize="18sp"
             android:textColor="@color/colorBlack"/>
 
@@ -36,16 +38,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:text="Ideal Partners: "
+                android:fontFamily="@font/open_sans"
+                android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
             <TextView
                 android:id="@+id/cplatform_home_helper_tags_TV"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="F &amp; B, Kids"
+                android:text="F ; B, Kids"
+                android:fontFamily="@font/open_sans"
+                android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
 
@@ -56,16 +62,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
                 android:text="Date Posted: "
-                android:textColor="@color/colorBlack"/>
+                android:textColor="@color/colorBlack"
+                android:textSize="15sp" />
             <TextView
                 android:id="@+id/cplatform_home_helper_date_TV"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="dd/mm/yyyy"
+                android:fontFamily="@font/open_sans"
+                android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
 
@@ -76,9 +86,11 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
                 android:text="Time Posted: "
+                android:fontFamily="@font/open_sans"
+                android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
             <TextView
                 android:id="@+id/cplatform_home_helper_time_TV"
@@ -86,6 +98,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="xx:xx hrs"
+                android:fontFamily="@font/open_sans"
+                android:textSize="15sp"
                 android:textColor="@color/colorBlack"/>
         </LinearLayout>
 
