--- a/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cplatform_home.xml
@@ -26,13 +26,14 @@
 
         <Button
             android:id="@+id/cplatform_create_collab_btn"
-            android:layout_width="150dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/rounded_button"
             android:fontFamily="@font/montserrat_bold"
-            android:text="Create Collab"
-            android:textColor="@color/colorWhite" />
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"
+            android:text="Create Collaboration"/>
     </RelativeLayout>
 
 </LinearLayout>
