--- a/Tech/Shopper/app/src/main/res/layout/activity_cplatform_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cplatform_view.xml
@@ -39,9 +39,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Collaboration Info:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <!-- Post Title -->
@@ -54,17 +54,20 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Title:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
                         android:id="@+id/cplatform_view_postTitle_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
                         android:layout_marginStart="10dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:fontFamily="@font/open_sans"
+                        android:text="1 For 1 Free..."
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"/>
 
                 </LinearLayout>
 
@@ -79,7 +82,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Description:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -87,9 +91,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:textColor="@color/colorBlack"/>
                 </LinearLayout>
 
                 <!-- Post Tags -->
@@ -100,10 +106,12 @@
 
 
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:text="Possible Collaborators:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
+                        />
 
 
                     <TextView
@@ -112,7 +120,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="Sports"
-                        android:layout_marginBottom="20dp"/>
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="20dp"
+                        android:textColor="@color/colorBlack"/>
                 </LinearLayout>
 
                 <!-- Post Date -->
@@ -125,7 +136,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Date Posted:"/>
 
 
@@ -135,6 +147,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="dd/mm/yyyy"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
 
@@ -148,7 +163,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Time Posted:"/>
 
 
@@ -158,6 +174,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="hh:mm aa"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -168,8 +187,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_marginVertical="20dp"/>
+                android:layout_marginVertical="10dp"
+                android:background="@android:color/darker_gray" />
 
             <!-- Parent: Images -->
             <LinearLayout
@@ -185,9 +204,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Images:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <LinearLayout
@@ -203,7 +222,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
-                android:layout_marginVertical="20dp"/>
+                android:layout_marginVertical="10dp"/>
 
             <!-- Parent: Store -->
             <LinearLayout
@@ -218,10 +237,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Store Info:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -245,7 +263,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/open_sans_bold"
                                 android:text="ABC PTE LTD"
-                                android:textSize="25sp"
+                                android:textSize="18sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -256,37 +274,37 @@
                                 android:fontFamily="@font/open_sans_bold"
                                 android:text="Tampines Mall"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cplatform_view_storeUnit_TV"
                                 android:layout_below="@id/cplatform_view_mallName_TV"
                                 android:layout_width="wrap_content"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_height="wrap_content"
                                 android:text="#07-77"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cplatform_view_storeTag_TV"
                                 android:layout_marginLeft="15dp"
                                 android:layout_below="@id/cplatform_view_mallName_TV"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_toRightOf="@id/cplatform_view_storeUnit_TV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="F n B"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cplatform_view_storeRating_TV"
                                 android:layout_below="@id/cplatform_view_storeUnit_TV"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="5.0"
@@ -330,7 +348,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="7"
                             android:scaleType="centerCrop"
-                            android:background="@color/colorPrimary"
+                            android:background="@color/colorMainDarkColour"
                             android:src="@drawable/ic_add_image"/>
 
 
@@ -352,13 +370,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorWhite">
 
             <Button
                 android:id="@+id/cplatform_view_request_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
                 android:layout_centerInParent="true"
+                android:fontFamily="@font/montserrat_bold"
+                android:background="@drawable/rounded_button"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
                 android:text="Request Collaboration"/>
         </RelativeLayout>
     </LinearLayout>
