--- a/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
@@ -38,9 +38,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Promotion Info:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/monda_bold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <!-- Post Title -->
@@ -53,7 +53,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Title:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -61,7 +62,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -77,7 +80,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Description:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -85,7 +89,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -102,7 +108,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Tags:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -111,6 +118,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="Sports"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
 
@@ -125,7 +135,9 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:text="Promo Date:"/>
+                        android:text="Promo Date:"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -134,7 +146,10 @@
                         android:layout_height="wrap_content"
                         android:text="dd/mm/yyyy - dd/mm/yyyy"
                         android:layout_marginStart="10dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="20dp"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -143,7 +158,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
-                android:layout_marginVertical="20dp"/>
+                android:layout_marginVertical="10dp"/>
 
 
             <!-- Parent: Images -->
@@ -160,9 +175,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Images:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <!-- Images -->
@@ -193,16 +208,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <!-- Post Header -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="QR Code:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <ImageView
@@ -226,10 +242,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Store Info:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -253,7 +268,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/open_sans_bold"
                                 android:text="ABC PTE LTD"
-                                android:textSize="25sp"
+                                android:textSize="18sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -264,37 +279,37 @@
                                 android:fontFamily="@font/open_sans_bold"
                                 android:text="Tampines Mall"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cpromo_view_storeUnit_TV"
                                 android:layout_below="@id/cpromo_view_mallName_TV"
                                 android:layout_width="wrap_content"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_height="wrap_content"
                                 android:text="#07-77"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cpromo_view_storeTag_TV"
                                 android:layout_marginLeft="15dp"
                                 android:layout_below="@id/cpromo_view_mallName_TV"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_toRightOf="@id/cpromo_view_storeUnit_TV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="F n B"
                                 android:textStyle="bold"
-                                android:textSize="20sp"
+                                android:textSize="18sp"
                                 />
 
                             <TextView
                                 android:id="@+id/cpromo_view_storeRating_TV"
                                 android:layout_below="@id/cpromo_view_storeUnit_TV"
-                                android:fontFamily="@font/open_sans"
+                                android:fontFamily="@font/open_sans_bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="5.0"
@@ -338,7 +353,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="7"
                             android:scaleType="centerCrop"
-                            android:background="@color/colorPrimary"
+                            android:background="@color/colorMainDarkColour"
                             android:src="@drawable/ic_add_image"/>
 
 
