--- a/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_create.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_create.xml
@@ -329,7 +329,7 @@
                     android:id="@+id/cpromo_create_choose_tag_btn"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="75dp"
                     android:background="@drawable/rounded_button"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="Choose"
@@ -361,6 +361,7 @@
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat_bold"
             android:background="@drawable/rounded_button"
             android:textColor="@color/colorWhite"
