--- a/Tech/Shopper/app/src/main/res/layout/activity_edit_promo_post.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_edit_promo_post.xml
@@ -24,10 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Edit Promotion Ideas"
-                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                android:fontFamily="@font/open_sans_extrabold"
-                android:layout_marginBottom="25dp"
+                android:textColor="@color/colorMainColour"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="20sp"/>
 
 
@@ -48,15 +47,16 @@
                         android:layout_height="wrap_content"
                         android:text="Promo Start Date: "
                         android:textStyle="bold"
-                        android:fontFamily="@font/open_sans_extrabold"
-                        android:textSize="12sp"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/edit_cpromo_create_startDate_ET"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Click to input start date"
-                        android:textSize="15sp"/>
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"/>
 
                 </LinearLayout>
 
@@ -72,15 +72,16 @@
                         android:layout_height="wrap_content"
                         android:text="Promo End Date: "
                         android:textStyle="bold"
-                        android:fontFamily="@font/open_sans_extrabold"
-                        android:textSize="12sp"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
                     <EditText
                         android:id="@+id/edit_cpromo_create_endDate_ET"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Click to input end date"
-                        android:textSize="15sp"/>
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -88,7 +89,6 @@
 
             <!-- Parent: Title -->
             <LinearLayout
-                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -100,15 +100,16 @@
                     android:layout_height="wrap_content"
                     android:text="Title:"
                     android:textStyle="bold"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="12sp"/>
+                    android:fontFamily="@font/open_sans_bold"
+                    android:textSize="16sp"/>
 
                 <EditText
                     android:id="@+id/edit_cpromo_create_title_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="25dp"
-                    android:fontFamily="@font/monda_bold"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/open_sans"
+                    android:textSize="16sp"
                     android:hint="Set a title" />
 
             </LinearLayout>
@@ -126,16 +127,17 @@
                     android:layout_height="wrap_content"
                     android:text="Description:"
                     android:textStyle="bold"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="12sp"/>
+                    android:fontFamily="@font/open_sans_bold"
+                    android:textSize="16sp"/>
 
                 <EditText
                     android:id="@+id/edit_cpromo_create_description_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="25dp"
-                    android:fontFamily="@font/monda_bold"
-                    android:hint="Need help with something? Got\ncustomers to refer to others?\nExploring new ways to do business?" />
+                    android:layout_marginBottom="15dp"
+                    android:fontFamily="@font/open_sans"
+                    android:textSize="16sp"
+                    android:hint="Need help with something?\nGot customers to refer to others?\nExploring new ways to do business?" />
 
             </LinearLayout>
 
@@ -150,20 +152,28 @@
                     android:layout_height="wrap_content"
                     android:text="Uploads:"
                     android:textStyle="bold"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="12sp"/>
+                    android:fontFamily="@font/open_sans_bold"
+                    android:textSize="16sp"/>
 
                 <Button
-                    android:id="@+id/edit_cpromo_create_add_photo_btn"
+                    android:id="@+id/cpromo_create_add_photo_btn"
                     android:layout_marginHorizontal="20dp"
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:text="Add"/>
+                    android:layout_height="40dp"
+                    android:background="@drawable/rounded_button"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Add"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14sp" />
 
                 <Button
-                    android:id="@+id/edit_cpromo_create_clear_photo_btn"
+                    android:id="@+id/cpromo_create_clear_photo_btn"
                     android:layout_width="100dp"
-                    android:layout_height="50dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/textbox_border"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textColor="@color/colorMainDarkColour"
+                    android:textSize="14sp"
                     android:text="Clear"/>
             </LinearLayout>
 
@@ -199,16 +209,20 @@
                     android:layout_height="wrap_content"
                     android:text="Choose your ideal tags:"
                     android:textStyle="bold"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="12sp"
-                    android:layout_marginBottom="50dp"/>
+                    android:fontFamily="@font/open_sans_bold"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="30dp"/>
 
                 <Button
                     android:id="@+id/edit_cpromo_create_choose_tag_btn"
                     android:layout_width="120dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="100dp"
-                    android:text="Choose"/>
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="75dp"
+                    android:background="@drawable/rounded_button"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Choose"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14sp" />
             </LinearLayout>
 
 
@@ -219,8 +233,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Display tags here.."
                 android:textStyle="bold"
-                android:fontFamily="@font/open_sans_extrabold"
-                android:textSize="12sp"/>
+                android:fontFamily="@font/open_sans"
+                android:textSize="16sp"/>
 
             <View
                 android:layout_width="match_parent"
@@ -232,8 +246,12 @@
         <Button
             android:id="@+id/edit_cpromo_apply_changes_btn"
             android:layout_width="180dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
+            android:fontFamily="@font/montserrat_bold"
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"
             android:text="Apply Changes"/>
     </LinearLayout>
 
