--- a/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
@@ -9,9 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:fontFamily="@font/cabin_semibold"
+        android:padding="10dp"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Chat List"
         android:textColor="@color/colorMainColour"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
 </FrameLayout>
