--- a/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
@@ -18,10 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:fontFamily="@font/cabin_semibold"
+            android:fontFamily="@font/montserrat_bold"
             android:text="What's Happening?"
             android:textColor="@color/colorMainColour"
-            android:textSize="20dp"
+            android:textSize="24sp"
             android:textStyle="bold" />
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/home_IS"
