--- a/Tech/Shopper/app/src/main/res/layout/activity_edit_cplatform_post.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_edit_cplatform_post.xml
@@ -6,11 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditCPlatformPostActivity"
-    android:background="@color/colorWhite">
+    android:background="@color/colorWhite"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -188,6 +189,7 @@
 
         <Button
             android:id="@+id/edit_cplatform_apply_changes_btn"
+            android:layout_marginTop="50dp"
             android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
